# cuvis.ai

./: .buildinfo  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Minimal_Example.ipynb  Minimal_Example4.ipynb  README.md  build_docs.sh  dev-requirements.txt  entrypoint.sh  entrypoint_doc.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  wrap_test.py  wrap_test_torch.py
_autosummary/: cuvis_ai.data.BaseDataSet.BaseDataSet.html  cuvis_ai.data.BaseDataSet.html  cuvis_ai.data.CuvisDataSet.html  cuvis_ai.data.Labels2TV.RLE2mask.html  cuvis_ai.data.Labels2TV.convert_COCO2TV.html  cuvis_ai.data.Labels2TV.html  cuvis_ai.data.LiveCuvisDataLoader.html  cuvis_ai.data.MetadataUtils.C_ATTRIB_LIST.html  cuvis_ai.data.MetadataUtils.html  cuvis_ai.data.MetadataUtils.metadataInit.html  cuvis_ai.data.NumpyDataSet.html  cuvis_ai.data.OutputFormat.html  cuvis_ai.data.PublicDataSets.html  cuvis_ai.data.cocolabels.Annotation.html  cuvis_ai.data.cocolabels.COCOData.html  cuvis_ai.data.cocolabels.Category.html  cuvis_ai.data.cocolabels.Image.html  cuvis_ai.data.cocolabels.Info.html  cuvis_ai.data.cocolabels.License.html  cuvis_ai.data.cocolabels.QueryableList.html  cuvis_ai.data.cocolabels.RLE2mask.html  cuvis_ai.data.cocolabels.html  cuvis_ai.data.html  cuvis_ai.data.metadata.Metadata.html  cuvis_ai.data.metadata.get_meta_from_mesu.html  cuvis_ai.data.metadata.get_meta_from_path.html  cuvis_ai.data.metadata.get_meta_from_session.html  cuvis_ai.data.metadata.html  cuvis_ai.data.utils_dataloader.html  (+229 more)
(+444 files in other folders)
